Source/JavaScriptCore/runtime/JSDateMath.cpp
@@ -254,7 +254,7 @@ double parseDateFromNullTerminatedCharacters(ExecState* exec, const char* dateSt
     if (!haveTZ) {
         double utcOffset = getUTCOffset(exec);
         double dstOffset = getDSTOffset(exec, ms, utcOffset);
-        offset = static_cast<int>((utcOffset + dstOffset) / WTF::msPerMinute);
+        offset = (utcOffset + dstOffset) / WTF::msPerMinute;
     }
     return ms - (offset * WTF::msPerMinute);
 }
