Source/WTF/wtf/DateMath.cpp
@@ -485,7 +485,7 @@ void initializeDates()
     equivalentYearForDST(2000); // Need to call once to initialize a static used in this function.
 }
 
-static inline double ymdhmsToSeconds(long year, int mon, int day, int hour, int minute, double second)
+static inline double ymdhmsToSeconds(int year, long mon, long day, long hour, long minute, double second)
 {
     double days = (day - 32075)
         + floor(1461 * (year + 4800.0 + (mon - 14) / 12) / 4)
@@ -554,11 +554,21 @@ static int findMonth(const char* monthStr)
     return -1;
 }
 
+static bool parseInt(const char* string, char** stopPosition, int base, int* result)
+{
+    long longResult = strtol(string, stopPosition, base);
+    // Avoid the use of errno as it is not available on Windows CE
+    if (string == *stopPosition || longResult <= std::numeric_limits<int>::min() || longResult >= std::numeric_limits<int>::max())
+        return false;
+    *result = static_cast<int>(longResult);
+    return true;
+}
+
 static bool parseLong(const char* string, char** stopPosition, int base, long* result)
 {
     *result = strtol(string, stopPosition, base);
     // Avoid the use of errno as it is not available on Windows CE
-    if (string == *stopPosition || *result == LONG_MIN || *result == LONG_MAX)
+    if (string == *stopPosition || *result == std::numeric_limits<long>::min() || *result == std::numeric_limits<long>::max())
         return false;
     return true;
 }
@@ -566,14 +576,14 @@ static bool parseLong(const char* string, char** stopPosition, int base, long* r
 // Parses a date with the format YYYY[-MM[-DD]].
 // Year parsing is lenient, allows any number of digits, and +/-.
 // Returns 0 if a parse error occurs, else returns the end of the parsed portion of the string.
-static char* parseES5DatePortion(const char* currentPosition, long& year, long& month, long& day)
+static char* parseES5DatePortion(const char* currentPosition, int& year, long& month, long& day)
 {
     char* postParsePosition;
 
     // This is a bit more lenient on the year string than ES5 specifies:
     // instead of restricting to 4 digits (or 6 digits with mandatory +/-),
     // it accepts any integer value. Consider this an implementation fallback.
-    if (!parseLong(currentPosition, &postParsePosition, 10, &year))
+    if (!parseInt(currentPosition, &postParsePosition, 10, &year))
         return 0;
 
     // Check for presence of -MM portion.
@@ -710,7 +720,7 @@ double parseES5DateFromNullTerminatedCharacters(const char* dateString)
     static const long daysPerMonth[12] = { 31, 29, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31 };
     
     // The year must be present, but the other fields may be omitted - see ES5.1 15.9.1.15.
-    long year = 0;
+    int year = 0;
     long month = 1;
     long day = 1;
     long hours = 0;
@@ -816,7 +826,7 @@ double parseDateFromNullTerminatedCharacters(const char* dateString, bool& haveT
     if (day < 0)
         return std::numeric_limits<double>::quiet_NaN();
 
-    long year = 0;
+    int year = 0;
     if (day > 31) {
         // ### where is the boundary and what happens below?
         if (*dateString != '/')
@@ -824,7 +834,9 @@ double parseDateFromNullTerminatedCharacters(const char* dateString, bool& haveT
         // looks like a YYYY/MM/DD date
         if (!*++dateString)
             return std::numeric_limits<double>::quiet_NaN();
-        year = day;
+        if (day <= std::numeric_limits<int>::min() || day >= std::numeric_limits<int>::max())
+            return std::numeric_limits<double>::quiet_NaN();
+        year = static_cast<int>(day);
         if (!parseLong(dateString, &newPosStr, 10, &month))
             return std::numeric_limits<double>::quiet_NaN();
         month -= 1;
@@ -879,7 +891,7 @@ double parseDateFromNullTerminatedCharacters(const char* dateString, bool& haveT
 
     // '99 23:12:40 GMT'
     if (year <= 0 && *dateString) {
-        if (!parseLong(dateString, &newPosStr, 10, &year))
+        if (!parseInt(dateString, &newPosStr, 10, &year))
             return std::numeric_limits<double>::quiet_NaN();
     }
 
@@ -966,7 +978,7 @@ double parseDateFromNullTerminatedCharacters(const char* dateString, bool& haveT
     
     // The year may be after the time but before the time zone.
     if (isASCIIDigit(*dateString) && year == -1) {
-        if (!parseLong(dateString, &newPosStr, 10, &year))
+        if (!parseInt(dateString, &newPosStr, 10, &year))
             return std::numeric_limits<double>::quiet_NaN();
         dateString = newPosStr;
         skipSpacesAndComments(dateString);
@@ -981,8 +993,8 @@ double parseDateFromNullTerminatedCharacters(const char* dateString, bool& haveT
         }
 
         if (*dateString == '+' || *dateString == '-') {
-            long o;
-            if (!parseLong(dateString, &newPosStr, 10, &o))
+            int o;
+            if (!parseInt(dateString, &newPosStr, 10, &o))
                 return std::numeric_limits<double>::quiet_NaN();
             dateString = newPosStr;
 
@@ -990,7 +1002,7 @@ double parseDateFromNullTerminatedCharacters(const char* dateString, bool& haveT
                 return std::numeric_limits<double>::quiet_NaN();
 
             int sgn = (o < 0) ? -1 : 1;
-            o = labs(o);
+            o = abs(o);
             if (*dateString != ':') {
                 if (o >= 24)
                     offset = ((o / 100) * 60 + (o % 100)) * sgn;
@@ -998,8 +1010,8 @@ double parseDateFromNullTerminatedCharacters(const char* dateString, bool& haveT
                     offset = o * 60 * sgn;
             } else { // GMT+05:00
                 ++dateString; // skip the ':'
-                long o2;
-                if (!parseLong(dateString, &newPosStr, 10, &o2))
+                int o2;
+                if (!parseInt(dateString, &newPosStr, 10, &o2))
                     return std::numeric_limits<double>::quiet_NaN();
                 dateString = newPosStr;
                 offset = (o * 60 + o2) * sgn;
@@ -1020,7 +1032,7 @@ double parseDateFromNullTerminatedCharacters(const char* dateString, bool& haveT
     skipSpacesAndComments(dateString);
 
     if (*dateString && year == -1) {
-        if (!parseLong(dateString, &newPosStr, 10, &year))
+        if (!parseInt(dateString, &newPosStr, 10, &year))
             return std::numeric_limits<double>::quiet_NaN();
         dateString = newPosStr;
         skipSpacesAndComments(dateString);
@@ -1053,7 +1065,7 @@ double parseDateFromNullTerminatedCharacters(const char* dateString)
     if (!haveTZ) {
         double utcOffset = calculateUTCOffset();
         double dstOffset = calculateDSTOffset(ms, utcOffset);
-        offset = static_cast<int>((utcOffset + dstOffset) / msPerMinute);
+        offset = (utcOffset + dstOffset) / msPerMinute;
     }
     return ms - (offset * msPerMinute);
 }
